# idl/grpcbasic0.pb.go
@@ -5,6 +5,11 @@
 /*
 Package idl is a generated protocol buffer package.
 
+User Service
+
+User Service API provides create, read, and read (many) access to a list of
+users.
+
 It is generated from these files:
 	grpcbasic0.proto
 
@@ -13,7 +18,7 @@ It has these top-level messages:
 	UserRecordReq
 	UserGetReq
 	Users
-	UsersListReq
+	UsersGetReq
 */
 package idl
 
@@ -85,23 +90,23 @@ func (m *Users) GetUsers() []*User {
 	return nil
 }
 
-type UsersListReq struct {
-	Count int64 `protobuf:"varint,1,opt,name=count" json:"count,omitempty"`
-	Start int64 `protobuf:"varint,2,opt,name=start" json:"start,omitempty"`
-	Down  bool  `protobuf:"varint,3,opt,name=down" json:"down,omitempty"`
+type UsersGetReq struct {
+	Start int64 `protobuf:"varint,1,opt,name=start" json:"start,omitempty"`
+	Count int64 `protobuf:"varint,2,opt,name=count" json:"count,omitempty"`
+	Desc  bool  `protobuf:"varint,3,opt,name=desc" json:"desc,omitempty"`
 }
 
-func (m *UsersListReq) Reset()                    { *m = UsersListReq{} }
-func (m *UsersListReq) String() string            { return proto.CompactTextString(m) }
-func (*UsersListReq) ProtoMessage()               {}
-func (*UsersListReq) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{4} }
+func (m *UsersGetReq) Reset()                    { *m = UsersGetReq{} }
+func (m *UsersGetReq) String() string            { return proto.CompactTextString(m) }
+func (*UsersGetReq) ProtoMessage()               {}
+func (*UsersGetReq) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{4} }
 
 func init() {
 	proto.RegisterType((*User)(nil), "idl.User")
 	proto.RegisterType((*UserRecordReq)(nil), "idl.UserRecordReq")
 	proto.RegisterType((*UserGetReq)(nil), "idl.UserGetReq")
 	proto.RegisterType((*Users)(nil), "idl.Users")
-	proto.RegisterType((*UsersListReq)(nil), "idl.UsersListReq")
+	proto.RegisterType((*UsersGetReq)(nil), "idl.UsersGetReq")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -117,7 +122,7 @@ const _ = grpc.SupportPackageIsVersion3
 type UserServiceClient interface {
 	RecordUser(ctx context.Context, in *UserRecordReq, opts ...grpc.CallOption) (*User, error)
 	GetUser(ctx context.Context, in *UserGetReq, opts ...grpc.CallOption) (*User, error)
-	ListUsers(ctx context.Context, in *UsersListReq, opts ...grpc.CallOption) (*Users, error)
+	GetUsers(ctx context.Context, in *UsersGetReq, opts ...grpc.CallOption) (*Users, error)
 }
 
 type userServiceClient struct {
@@ -146,9 +151,9 @@ func (c *userServiceClient) GetUser(ctx context.Context, in *UserGetReq, opts ..
 	return out, nil
 }
 
-func (c *userServiceClient) ListUsers(ctx context.Context, in *UsersListReq, opts ...grpc.CallOption) (*Users, error) {
+func (c *userServiceClient) GetUsers(ctx context.Context, in *UsersGetReq, opts ...grpc.CallOption) (*Users, error) {
 	out := new(Users)
-	err := grpc.Invoke(ctx, "/idl.UserService/ListUsers", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/idl.UserService/GetUsers", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -160,7 +165,7 @@ func (c *userServiceClient) ListUsers(ctx context.Context, in *UsersListReq, opt
 type UserServiceServer interface {
 	RecordUser(context.Context, *UserRecordReq) (*User, error)
 	GetUser(context.Context, *UserGetReq) (*User, error)
-	ListUsers(context.Context, *UsersListReq) (*Users, error)
+	GetUsers(context.Context, *UsersGetReq) (*Users, error)
 }
 
 func RegisterUserServiceServer(s *grpc.Server, srv UserServiceServer) {
@@ -203,20 +208,20 @@ func _UserService_GetUser_Handler(srv interface{}, ctx context.Context, dec func
 	return interceptor(ctx, in, info, handler)
 }
 
-func _UserService_ListUsers_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(UsersListReq)
+func _UserService_GetUsers_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UsersGetReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(UserServiceServer).ListUsers(ctx, in)
+		return srv.(UserServiceServer).GetUsers(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/idl.UserService/ListUsers",
+		FullMethod: "/idl.UserService/GetUsers",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(UserServiceServer).ListUsers(ctx, req.(*UsersListReq))
+		return srv.(UserServiceServer).GetUsers(ctx, req.(*UsersGetReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -234,8 +239,8 @@ var _UserService_serviceDesc = grpc.ServiceDesc{
 			Handler:    _UserService_GetUser_Handler,
 		},
 		{
-			MethodName: "ListUsers",
-			Handler:    _UserService_ListUsers_Handler,
+			MethodName: "GetUsers",
+			Handler:    _UserService_GetUsers_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
@@ -245,28 +250,27 @@ var _UserService_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("grpcbasic0.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 354 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0x64, 0x92, 0xb1, 0x6e, 0xea, 0x30,
-	0x18, 0x85, 0xe5, 0x04, 0x2e, 0xe4, 0xe7, 0xc2, 0xe5, 0x1a, 0x86, 0x14, 0x21, 0x15, 0x79, 0x8a,
-	0x18, 0x48, 0x4b, 0xd5, 0x85, 0x89, 0x8d, 0xa5, 0xea, 0x90, 0xaa, 0xdd, 0x43, 0xec, 0x46, 0x96,
-	0xa8, 0x4d, 0x6d, 0x43, 0x87, 0xaa, 0x4b, 0x5f, 0xa1, 0x8f, 0xc6, 0x2b, 0xf4, 0x41, 0x2a, 0xdb,
-	0x24, 0x54, 0xed, 0xf6, 0xfb, 0xcf, 0x39, 0x9f, 0xcf, 0xb1, 0x02, 0xfd, 0x52, 0x6d, 0x8b, 0x75,
-	0xae, 0x79, 0x71, 0x31, 0xdb, 0x2a, 0x69, 0x24, 0x0e, 0x39, 0xdd, 0x8c, 0xc6, 0xa5, 0x94, 0xe5,
-	0x86, 0xa5, 0xf9, 0x96, 0xa7, 0xb9, 0x10, 0xd2, 0xe4, 0x86, 0x4b, 0xa1, 0xbd, 0x84, 0x3c, 0x40,
-	0xe3, 0x5e, 0x33, 0x85, 0x7b, 0x10, 0x70, 0x1a, 0xa3, 0x09, 0x4a, 0xc2, 0x2c, 0xe0, 0x14, 0x63,
-	0x68, 0x88, 0xfc, 0x89, 0xc5, 0xc1, 0x04, 0x25, 0x51, 0xe6, 0x66, 0xdc, 0x87, 0x30, 0x2f, 0x59,
-	0x1c, 0x3a, 0x91, 0x1d, 0x71, 0x0c, 0xad, 0x47, 0xa9, 0xcc, 0x4e, 0xb0, 0xb8, 0xe1, 0x84, 0xd5,
-	0x91, 0x5c, 0x43, 0xd7, 0x72, 0x33, 0x56, 0x48, 0x45, 0x33, 0xf6, 0x5c, 0x03, 0xd1, 0x6f, 0x60,
-	0x50, 0x03, 0xc9, 0x18, 0xc0, 0xda, 0x56, 0xcc, 0x58, 0xcf, 0x8f, 0x50, 0x24, 0x81, 0xa6, 0xfd,
-	0xaa, 0xf1, 0x39, 0x34, 0x77, 0x76, 0x88, 0xd1, 0x24, 0x4c, 0x3a, 0xf3, 0x68, 0xc6, 0xe9, 0x66,
-	0xe6, 0xee, 0xf3, 0x7b, 0x72, 0x0b, 0x7f, 0x9d, 0xf2, 0x86, 0x6b, 0x47, 0x1a, 0x42, 0xb3, 0x90,
-	0x3b, 0x61, 0x8e, 0x30, 0x7f, 0xb0, 0x5b, 0x6d, 0x72, 0x65, 0x8e, 0x09, 0xfc, 0xc1, 0x26, 0xa5,
-	0xf2, 0x45, 0xb8, 0x9e, 0xed, 0xcc, 0xcd, 0xf3, 0x03, 0x82, 0x8e, 0x05, 0xde, 0x31, 0xb5, 0xe7,
-	0x05, 0xc3, 0x4b, 0x00, 0x5f, 0xcd, 0x3d, 0x1e, 0x3e, 0xdd, 0x5f, 0xf5, 0x1d, 0x9d, 0x32, 0x91,
-	0xc1, 0xfb, 0xe1, 0xf3, 0x23, 0xe8, 0x92, 0x76, 0xba, 0xbf, 0x4c, 0x6d, 0xbe, 0x05, 0x9a, 0xe2,
-	0x25, 0xb4, 0x56, 0xcc, 0x38, 0xfb, 0xbf, 0x5a, 0xea, 0x7b, 0x7f, 0xf7, 0x9e, 0x39, 0xef, 0x80,
-	0xf4, 0x2a, 0xaf, 0x4e, 0x5f, 0x39, 0x7d, 0xf3, 0x84, 0xc8, 0xd6, 0xf3, 0x2f, 0xf2, 0xbf, 0xb6,
-	0x54, 0x9d, 0x47, 0x70, 0x5a, 0x91, 0xa1, 0xc3, 0xf4, 0x48, 0x54, 0x63, 0x16, 0x68, 0xba, 0xfe,
-	0xe3, 0xfe, 0x81, 0xab, 0xaf, 0x00, 0x00, 0x00, 0xff, 0xff, 0x4e, 0xa9, 0x36, 0xb6, 0x3a, 0x02,
-	0x00, 0x00,
+	// 345 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x09, 0x6e, 0x88, 0x02, 0xff, 0x64, 0x91, 0xb1, 0x4e, 0xc3, 0x30,
+	0x10, 0x86, 0x95, 0xa4, 0xa5, 0xed, 0x55, 0xa5, 0xe5, 0x00, 0x29, 0xaa, 0x2a, 0x51, 0x79, 0x8a,
+	0x18, 0x1a, 0x28, 0x62, 0x01, 0x06, 0xb6, 0x4e, 0x2c, 0x41, 0xb0, 0xbb, 0xb1, 0x89, 0x2c, 0x95,
+	0xb8, 0xd8, 0x6e, 0x17, 0xc4, 0xc2, 0x2b, 0xf0, 0x56, 0xac, 0xbc, 0x02, 0x0f, 0x82, 0x6c, 0x27,
+	0x29, 0x82, 0xed, 0xee, 0xf2, 0xff, 0xdf, 0xfd, 0x17, 0xc3, 0xa8, 0x50, 0xeb, 0x7c, 0x49, 0xb5,
+	0xc8, 0xcf, 0x66, 0x6b, 0x25, 0x8d, 0xc4, 0x48, 0xb0, 0xd5, 0x78, 0x52, 0x48, 0x59, 0xac, 0x78,
+	0x4a, 0xd7, 0x22, 0xa5, 0x65, 0x29, 0x0d, 0x35, 0x42, 0x96, 0xda, 0x4b, 0xc8, 0x23, 0xb4, 0x1e,
+	0x34, 0x57, 0xb8, 0x0f, 0xa1, 0x60, 0x71, 0x30, 0x0d, 0x92, 0x28, 0x0b, 0x05, 0x43, 0x84, 0x56,
+	0x49, 0x9f, 0x79, 0x1c, 0x4e, 0x83, 0xa4, 0x97, 0xb9, 0x1a, 0x47, 0x10, 0xd1, 0x82, 0xc7, 0x91,
+	0x13, 0xd9, 0x12, 0x63, 0xe8, 0x3c, 0x49, 0x65, 0x36, 0x25, 0x8f, 0x5b, 0x4e, 0x58, 0xb7, 0xe4,
+	0x12, 0x06, 0x96, 0x9b, 0xf1, 0x5c, 0x2a, 0x96, 0xf1, 0x97, 0x06, 0x18, 0xfc, 0x07, 0x86, 0x0d,
+	0x90, 0x4c, 0x00, 0xac, 0x6d, 0xc1, 0x8d, 0xf5, 0xfc, 0x09, 0x45, 0x12, 0x68, 0xdb, 0xaf, 0x1a,
+	0x4f, 0xa0, 0xbd, 0xb1, 0x45, 0x1c, 0x4c, 0xa3, 0xa4, 0x3f, 0xef, 0xcd, 0x04, 0x5b, 0xcd, 0xdc,
+	0x3e, 0x3f, 0x27, 0x77, 0xd0, 0x77, 0xca, 0x0a, 0x74, 0x04, 0x6d, 0x6d, 0xa8, 0x32, 0x15, 0xcb,
+	0x37, 0x76, 0x9a, 0xcb, 0x4d, 0x69, 0xaa, 0x00, 0xbe, 0xb1, 0x41, 0x19, 0xd7, 0xb9, 0x3b, 0xb3,
+	0x9b, 0xb9, 0x7a, 0xfe, 0x19, 0x78, 0xde, 0x3d, 0x57, 0x5b, 0x91, 0x73, 0xbc, 0x05, 0xf0, 0x97,
+	0xb9, 0x7f, 0x87, 0xbb, 0xf5, 0xf5, 0xb9, 0xe3, 0x5d, 0x24, 0x72, 0xf8, 0xfe, 0xf5, 0xfd, 0x11,
+	0x0e, 0x48, 0x37, 0xdd, 0x9e, 0xa7, 0x36, 0xde, 0x55, 0x70, 0x8a, 0x37, 0xd0, 0x59, 0x70, 0xe3,
+	0xec, 0xc3, 0x46, 0xea, 0xd3, 0xfe, 0xf6, 0x1e, 0x3b, 0xef, 0x10, 0x07, 0xb5, 0x37, 0x7d, 0x15,
+	0xec, 0x0d, 0xaf, 0xa1, 0x5b, 0xb9, 0x35, 0x8e, 0x1a, 0x75, 0x75, 0xed, 0x18, 0x76, 0x13, 0x72,
+	0xe0, 0x00, 0x7d, 0xec, 0xd5, 0x00, 0xbd, 0xdc, 0x73, 0x2f, 0x7f, 0xf1, 0x13, 0x00, 0x00, 0xff,
+	0xff, 0x80, 0x52, 0x6c, 0x91, 0x30, 0x02, 0x00, 0x00,
 }
