# idl/grpcbasic0.swagger.json
@@ -1,7 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "grpcbasic0.proto",
+    "title": "User Service",
+    "description": "User Service API provides create, read, and read (many) access to a list of \nusers.",
     "version": "version not set"
   },
   "schemes": [
@@ -41,34 +42,8 @@
         ]
       }
     },
-    "/v1/users": {
-      "post": {
-        "operationId": "ListUsers",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/idlUsers"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/idlUsersListReq"
-            }
-          }
-        ],
-        "tags": [
-          "UserService"
-        ]
-      }
-    },
-    "/v1/users/{id}": {
-      "post": {
+    "/v1/user/{id}": {
+      "get": {
         "operationId": "GetUser",
         "responses": {
           "200": {
@@ -85,14 +60,42 @@
             "required": true,
             "type": "string",
             "format": "int64"
+          }
+        ],
+        "tags": [
+          "UserService"
+        ]
+      }
+    },
+    "/v1/users": {
+      "get": {
+        "operationId": "GetUsers",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/idlUsers"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "start",
+            "in": "query",
+            "required": false,
+            "type": "string"
           },
           {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/idlUserGetReq"
-            }
+            "name": "count",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "desc",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
           }
         ],
         "tags": [
@@ -156,14 +159,14 @@
         }
       }
     },
-    "idlUsersListReq": {
+    "idlUsersGetReq": {
       "type": "object",
       "properties": {
         "count": {
           "type": "string",
           "format": "int64"
         },
-        "down": {
+        "desc": {
           "type": "boolean",
           "format": "boolean"
         },
